fix hero font size on mobile

--- a/nextjs-dashboard/app/ui/global.scss
+++ b/nextjs-dashboard/app/ui/global.scss
@@ -98,7 +98,7 @@ h1 {
   padding: 0.5rem;
 }
 
-h1, .big {
+h1, .big{
     font-size: 5rem;
     padding: 1rem;
 }
@@ -114,6 +114,7 @@ h1, .big {
 
 @media screen and (min-width: 480px)  {
     .big {
+        font-size: 2rem;
         max-width: 67%;
         margin-bottom: 3rem;
     }
