--- a/nextjs-dashboard/app/ui/home.module.scss
+++ b/nextjs-dashboard/app/ui/home.module.scss
@@ -3,12 +3,13 @@
 }
 
 .big {
-    font-size: 5rem;
+    font-size: 2rem;
     padding: 1rem;
 }
 
 @media screen and (min-width: 480px)  {
     .big {
+        font-size: 5rem;
         max-width: 67%;
         margin-bottom: 3rem;
     }
